--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/react-dropzone": "^4.2.2",
     "eslint": "^9",
     "eslint-config-next": "15.1.0",
+    "eslint-config-prettier": "^9.1.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
