--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "embla-carousel-react": "^8.5.1",
     "lucide-react": "^0.468.0",
+    "motion": "^11.15.0",
     "next": "15.1.0",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
